; ModuleID = '/home/carl/AnghaBench/mruby/mrbgems/mruby-io/src/extr_file_test.c_mrb_filetest_s_size_p.c'
source_filename = "/home/carl/AnghaBench/mruby/mrbgems/mruby-io/src/extr_file_test.c_mrb_filetest_s_size_p.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stat = type { i64 }

@.str = private unnamed_addr constant [2 x i8] c"o\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mrb_filetest_s_size_p(i32* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.stat, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load i32*, i32** %4, align 8
  %9 = call i32 @mrb_get_args(i32* %8, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i32* %7)
  %10 = load i32*, i32** %4, align 8
  %11 = load i32, i32* %7, align 4
  %12 = call i64 @mrb_stat(i32* %10, i32 %11, %struct.stat* %6)
  %13 = icmp slt i64 %12, 0
  br i1 %13, label %14, label %16

14:                                               ; preds = %2
  %15 = call i32 (...) @mrb_nil_value()
  store i32 %15, i32* %3, align 4
  br label %26

16:                                               ; preds = %2
  %17 = getelementptr inbounds %struct.stat, %struct.stat* %6, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = icmp eq i64 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %16
  %21 = call i32 (...) @mrb_nil_value()
  store i32 %21, i32* %3, align 4
  br label %26

22:                                               ; preds = %16
  %23 = getelementptr inbounds %struct.stat, %struct.stat* %6, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = call i32 @mrb_fixnum_value(i64 %24)
  store i32 %25, i32* %3, align 4
  br label %26

26:                                               ; preds = %22, %20, %14
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local i32 @mrb_get_args(i32*, i8*, i32*) #1

declare dso_local i64 @mrb_stat(i32*, i32, %struct.stat*) #1

declare dso_local i32 @mrb_nil_value(...) #1

declare dso_local i32 @mrb_fixnum_value(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
